--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="http://maps.googleapis.com/maps/api/js?libraries=visualization"></script>
+
 </body>
 </html>
